--- a/Base1.html
+++ b/Base1.html
@@ -3,58 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Dashboard - Productos</title>
+    <title>Admin Bases de datos documentales</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="Css/style.css">
 </head>
 <body>
-    <div class="d-flex flex-column flex-md-row">
-        <div class="sidebar">
-
+    <div class="d-flex">
+        <div class="sidebar bg-dark text-light p-3 vh-100">
             <nav class="nav flex-column mt-4">
-                <a class="nav-link" href="/Base1.html"><i class="bi bi-people"></i>  documentales</i></a>
-                <a class="nav-link" href="/Base2.html"><i class="bi bi-person-bounding-box"></i>  clave-valor</i></a>
-                <a class="nav-link" href="/Base3.html"><i class="bi bi-tags"></i>  Orientadas a Columnas</i></a>
-                <a class="nav-link" href="/Base4.html"><i class="bi bi-box-seam"></i>  grafos</i></a>
+                <a class="nav-link text-light" href="/Base1.html"><i class="bi bi-people"></i> Documentales</a>
+                <a class="nav-link text-light" href="/Base2.html"><i class="bi bi-person-bounding-box"></i> Clave-Valor</a>
+                <a class="nav-link text-light" href="/Base3.html"><i class="bi bi-tags"></i> Orientadas a Columnas</a>
+                <a class="nav-link text-light" href="/Base4.html"><i class="bi bi-box-seam"></i> Grafos</a>
             </nav>
         </div>
+        <div class="content p-4 w-100">
+            <h1 class="text-center mb-4">Bases de datos documentales</h1>
+            <div class="row justify-content-center mb-4">
+                <img src="/Img/b1.png" class="img-fluid mb-4" alt="Placeholder Image">
+            </div>
+            <div class="row mb-4">
+                <div class="col-12">
+                    <h2 class="text-center mb-3">Introducción</h2>
+                    <p class="text-center">Las bases de datos documentales están diseñadas para almacenar, recuperar y gestionar documentos semiestructurados. Son especialmente útiles para aplicaciones que manejan grandes volúmenes de documentos como correos electrónicos, artículos de noticias, documentos legales, y contenido web.</p>
+                </div>
+            </div>
+            <div class="row mb-4">
+                <div class="col-12">
+                    <h2 class="text-center mb-3">Características</h2>
+                    <p class="text-center"><strong>Flexibilidad en el esquema:</strong> No requieren un esquema fijo, lo que permite almacenar documentos con diferentes estructuras.<br>
+                        <strong>Capacidad de consulta avanzada:</strong> Permiten búsquedas complejas dentro del contenido de los documentos.<br>
+                        <strong>Indexación de texto completo:</strong> Facilitan la indexación y búsqueda de texto completo.<br>
+                        <strong>Integración con aplicaciones:</strong> Se integran bien con aplicaciones que requieren manejo de documentos como sistemas de gestión de contenidos (CMS).</p>
+                </div>
+            </div>
+            <div class="row mb-4">
+                <div class="col-12">
+                    <h2 class="text-center mb-3">Funcionamiento</h2>
+                    <p class="text-center">Las bases de datos documentales almacenan datos en formato de documentos, típicamente en JSON, BSON o XML. Cada documento es una unidad independiente que puede contener datos en una estructura jerárquica. Los motores de base de datos indexan el contenido de estos documentos para permitir consultas rápidas y eficientes.</p>
+                </div>
+            </div>
+            <div class="row mb-4">
+                <div class="col-12">
+                    <h2 class="text-center mb-3">Desventajas</h2>
+                    <p class="text-center"><strong>Consistencia:</strong> Mantener la consistencia de datos puede ser más difícil en comparación con bases de datos relacionales.<br>
+                        <strong>Complejidad de consultas:</strong> Las consultas pueden ser más complejas y menos eficientes en algunos casos.<br>
+                        <strong>Espacio de almacenamiento:</strong> Pueden requerir más espacio de almacenamiento debido a la naturaleza semiestructurada de los datos.</p>
+                </div>
+            </div>
+            <div class="row mb-4">
+                <div class="col-12">
+                    <h2 class="text-center mb-3">Página oficial de documentación</h2>
+                    <p class="text-center"><strong>MongoDB:</strong> https://www.mongodb.com/docs/<br>
+                        <strong>CouchDB:</strong> https://docs.couchdb.org/en/stable/</p>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="content">
-        <h1 class="text-center">Bases de datos documentales</h1>
-        <div class="row py-4 ">
-            <h2 class="text-center">Inroduccion</h2>
-            <div class="row py-4 ">
-                <p class="text-center">sadsadsaaaa</p>
-            </div>
-        </div>
-        <div class="row py-4 ">
-            <h2 class="text-center">Características</h2>
-            <div class="row py-4 ">
-                <p class="text-center">sadsadsaaaa</p>
-            </div>
-        </div>
-        <div class="row py-4 ">
-            <h2 class="text-center">Funcionamiento</h2>
-            <div class="row py-4 ">
-                <p class="text-center">sadsadsaaaa</p>
-            </div>
-        </div>
-        <div class="row py-4 ">
-            <h2 class="text-center">Desventajas</h2>
-            <div class="row py-4 ">
-                <p class="text-center">sadsadsaaaa</p>
-            </div>
-        </div>
-        <div class="row py-4 ">
-            <h2 class="text-center">Página oficial de documentación</h2>
-            <div class="row py-4 ">
-                <p class="text-center">sadsadsaaaa</p>
-            </div>
-        </div>
-    </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+Nlg3ytVx1T3MEfsyINwW1N9K4Ypg" crossorigin="anonymous"></script>
 </body>
 </html>
+
