--- a/Base2.html
+++ b/Base2.html
@@ -3,58 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Dashboard - Productos</title>
+    <title>Admin Bases de datos clave-valor</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="Css/style.css">
 </head>
 <body>
-    <div class="d-flex flex-column flex-md-row">
-        <div class="sidebar">
-
+    <div class="d-flex">
+        <div class="sidebar bg-dark text-light p-3 vh-100">
             <nav class="nav flex-column mt-4">
-                <a class="nav-link" href="/Base1.html"><i class="bi bi-people"></i>  documentales</i></a>
-                <a class="nav-link" href="/Base2.html"><i class="bi bi-person-bounding-box"></i>  clave-valor</i></a>
-                <a class="nav-link" href="/Base3.html"><i class="bi bi-tags"></i>  Orientadas a Columnas</i></a>
-                <a class="nav-link" href="/Base4.html"><i class="bi bi-box-seam"></i>  grafos</i></a>
+                <a class="nav-link text-light" href="/Base1.html"><i class="bi bi-people"></i> Documentales</a>
+                <a class="nav-link text-light" href="/Base2.html"><i class="bi bi-person-bounding-box"></i> Clave-Valor</a>
+                <a class="nav-link text-light" href="/Base3.html"><i class="bi bi-tags"></i> Orientadas a Columnas</a>
+                <a class="nav-link text-light" href="/Base4.html"><i class="bi bi-box-seam"></i> Grafos</a>
             </nav>
         </div>
+        <div class="content p-4 w-100">
+            <h1 class="text-center mb-4">Bases de datos clave-valor</h1>
+            <div class="row justify-content-center mb-4">
+                <img src="/Img/b2.jpg" class="img-fluid mb-4" alt="Placeholder Image">
+            </div>
+            <div class="row mb-4">
+                <div class="col-12">
+                    <h2 class="text-center mb-3">Introducción</h2>
+                    <p class="text-center">Las bases de datos clave-valor son un tipo de base de datos NoSQL que utiliza un modelo simple de clave-valor para almacenar datos. Son muy rápidas y eficientes para operaciones de lectura y escritura.</p>
+                </div>
+            </div>
+            <div class="row mb-4">
+                <div class="col-12">
+                    <h2 class="text-center mb-3">Características</h2>
+                    <p class="text-center"><strong>Simplicidad:</strong> Utilizan un modelo de datos muy simple.<br>
+                        <strong>Alto rendimiento::</strong> Son extremadamente rápidas para operaciones de lectura y escritura.<br>
+                        <strong>Escalabilidad horizontal:</strong> Se escalan fácilmente distribuyendo los datos entre múltiples nodos.<br>
+                        <strong>Flexibilidad de esquema:</strong> No requieren un esquema fijo, permitiendo almacenamiento flexible.</p>
+                </div>
+            </div>
+            <div class="row mb-4">
+                <div class="col-12">
+                    <h2 class="text-center mb-3">Funcionamiento</h2>
+                    <p class="text-center">En una base de datos clave-valor, cada dato es almacenado como un par de clave y valor. La clave es un identificador único que se utiliza para acceder al valor correspondiente. Este modelo es ideal para aplicaciones que requieren acceso rápido y frecuente a datos específicos.</p>
+                </div>
+            </div>
+            <div class="row mb-4">
+                <div class="col-12">
+                    <h2 class="text-center mb-3">Desventajas</h2>
+                    <p class="text-center"><strong>Limitaciones en consultas:</strong> Las capacidades de consulta son limitadas, no permiten consultas complejas.<br>
+                        <strong>Gestión de relaciones:</strong> No gestionan bien las relaciones entre datos, lo que puede complicar algunos tipos de aplicaciones.<br>
+                        <strong>Flexibilidad limitada:</strong> Aunque son flexibles en términos de esquema, pueden ser menos flexibles para consultas dinámicas y ad-hoc.</p>
+                </div>
+            </div>
+            <div class="row mb-4">
+                <div class="col-12">
+                    <h2 class="text-center mb-3">Página oficial de documentación</h2>
+                    <p class="text-center"><strong>Redis:</strong> https://docs.aws.amazon.com/amazondynamodb/latest/developerguide/Introduction.html<br>
+                        <strong>DynamoDB:</strong> https://redis.io/docs/latest/</p>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="content">
-        <h1 class="text-center">Bases de datos clave-valor</h1>
-        <div class="row py-4 ">
-            <h2 class="text-center">Inroduccion</h2>
-            <div class="row py-4 ">
-                <p class="text-center">sadsadsaaaa</p>
-            </div>
-        </div>
-        <div class="row py-4 ">
-            <h2 class="text-center">Características</h2>
-            <div class="row py-4 ">
-                <p class="text-center">sadsadsaaaa</p>
-            </div>
-        </div>
-        <div class="row py-4 ">
-            <h2 class="text-center">Funcionamiento</h2>
-            <div class="row py-4 ">
-                <p class="text-center">sadsadsaaaa</p>
-            </div>
-        </div>
-        <div class="row py-4 ">
-            <h2 class="text-center">Desventajas</h2>
-            <div class="row py-4 ">
-                <p class="text-center">sadsadsaaaa</p>
-            </div>
-        </div>
-        <div class="row py-4 ">
-            <h2 class="text-center">Página oficial de documentación</h2>
-            <div class="row py-4 ">
-                <p class="text-center">sadsadsaaaa</p>
-            </div>
-        </div>
-    </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+Nlg3ytVx1T3MEfsyINwW1N9K4Ypg" crossorigin="anonymous"></script>
 </body>
 </html>
