--- a/Base3.html
+++ b/Base3.html
@@ -3,58 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Dashboard - Productos</title>
+    <title>Admin Bases de datos Orientadas a Columnas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="Css/style.css">
 </head>
 <body>
-    <div class="d-flex flex-column flex-md-row">
-        <div class="sidebar">
-
+    <div class="d-flex">
+        <div class="sidebar bg-dark text-light p-3 vh-100">
             <nav class="nav flex-column mt-4">
-                <a class="nav-link" href="/Base1.html"><i class="bi bi-people"></i>  documentales</i></a>
-                <a class="nav-link" href="/Base2.html"><i class="bi bi-person-bounding-box"></i>  clave-valor</i></a>
-                <a class="nav-link" href="/Base3.html"><i class="bi bi-tags"></i>  Orientadas a Columnas</i></a>
-                <a class="nav-link" href="/Base4.html"><i class="bi bi-box-seam"></i>  grafos</i></a>
+                <a class="nav-link text-light" href="/Base1.html"><i class="bi bi-people"></i> Documentales</a>
+                <a class="nav-link text-light" href="/Base2.html"><i class="bi bi-person-bounding-box"></i> Clave-Valor</a>
+                <a class="nav-link text-light" href="/Base3.html"><i class="bi bi-tags"></i> Orientadas a Columnas</a>
+                <a class="nav-link text-light" href="/Base4.html"><i class="bi bi-box-seam"></i> Grafos</a>
             </nav>
         </div>
+        <div class="content p-4 w-100">
+            <h1 class="text-center mb-4">Bases de datos Orientadas a Columnas</h1>
+            <div class="row justify-content-center mb-4">
+                <img src="/Img/b3.jfif" class="img-fluid mb-4" alt="Placeholder Image">
+            </div>
+            <div class="row mb-4">
+                <div class="col-12">
+                    <h2 class="text-center mb-3">Introducción</h2>
+                    <p class="text-center">Las bases de datos orientadas a columnas están optimizadas para consultas de lectura intensiva y analíticas. En lugar de almacenar datos por filas, almacenan datos por columnas, lo que permite un acceso más rápido a los datos durante operaciones de lectura masiva.</p>
+                </div>
+            </div>
+            <div class="row mb-4">
+                <div class="col-12">
+                    <h2 class="text-center mb-3">Características</h2>
+                    <p class="text-center"><strong>Optimización para lecturas:</strong> Son extremadamente rápidas para operaciones de lectura y agregación.<br>
+                        <strong>Compresión de datos:</strong> Ofrecen mejores opciones de compresión debido a la naturaleza homogénea de los datos en cada columna.<br>
+                        <strong>Eficiencia de almacenamiento:</strong> Almacenan solo las columnas necesarias, reduciendo el espacio de almacenamiento y mejorando el rendimiento de lectura.<br>
+                        <strong>Escalabilidad:</strong> Se escalan bien en grandes volúmenes de datos.</p>
+                </div>
+            </div>
+            <div class="row mb-4">
+                <div class="col-12">
+                    <h2 class="text-center mb-3">Funcionamiento</h2>
+                    <p class="text-center">En una base de datos orientada a columnas, los datos se almacenan en bloques de columnas en lugar de filas. Esto permite que las consultas de lectura accedan solo a las columnas necesarias, mejorando significativamente el rendimiento en consultas analíticas y de agregación.</p>
+                </div>
+            </div>
+            <div class="row mb-4">
+                <div class="col-12">
+                    <h2 class="text-center mb-3">Desventajas</h2>
+                    <p class="text-center"><strong>Operaciones de escritura:</strong> Las operaciones de escritura pueden ser más lentas en comparación con bases de datos orientadas a filas.<br>
+                        <strong>Actualizaciones frecuentes:</strong> No son ideales para aplicaciones que requieren actualizaciones frecuentes de datos.<br>
+                        <strong>Complejidad:</strong> Pueden ser más complejas de configurar y mantener en comparación con otros tipos de bases de datos.</p>
+                </div>
+            </div>
+            <div class="row mb-4">
+                <div class="col-12">
+                    <h2 class="text-center mb-3">Página oficial de documentación</h2>
+                    <p class="text-center"><strong>Apache Cassandra:</strong> https://cassandra.apache.org/doc/latest/<br>
+                        <strong>HBase:</strong> https://hbase.apache.org/book.html</p>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="content">
-        <h1 class="text-center">Bases de datos Orientadas a Columnas</h1>
-        <div class="row py-4 ">
-            <h2 class="text-center">Inroduccion</h2>
-            <div class="row py-4 ">
-                <p class="text-center">sadsadsaaaa</p>
-            </div>
-        </div>
-        <div class="row py-4 ">
-            <h2 class="text-center">Características</h2>
-            <div class="row py-4 ">
-                <p class="text-center">sadsadsaaaa</p>
-            </div>
-        </div>
-        <div class="row py-4 ">
-            <h2 class="text-center">Funcionamiento</h2>
-            <div class="row py-4 ">
-                <p class="text-center">sadsadsaaaa</p>
-            </div>
-        </div>
-        <div class="row py-4 ">
-            <h2 class="text-center">Desventajas</h2>
-            <div class="row py-4 ">
-                <p class="text-center">sadsadsaaaa</p>
-            </div>
-        </div>
-        <div class="row py-4 ">
-            <h2 class="text-center">Página oficial de documentación</h2>
-            <div class="row py-4 ">
-                <p class="text-center">sadsadsaaaa</p>
-            </div>
-        </div>
-    </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+Nlg3ytVx1T3MEfsyINwW1N9K4Ypg" crossorigin="anonymous"></script>
 </body>
 </html>
