--- a/Base4.html
+++ b/Base4.html
@@ -3,58 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Dashboard - Productos</title>
+    <title>Admin Bases de datos de grafos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="Css/style.css">
 </head>
 <body>
-    <div class="d-flex flex-column flex-md-row">
-        <div class="sidebar">
-
+    <div class="d-flex">
+        <div class="sidebar bg-dark text-light p-3 vh-100">
             <nav class="nav flex-column mt-4">
-                <a class="nav-link" href="/Base1.html"><i class="bi bi-people"></i>  documentales</i></a>
-                <a class="nav-link" href="/Base2.html"><i class="bi bi-person-bounding-box"></i>  clave-valor</i></a>
-                <a class="nav-link" href="/Base3.html"><i class="bi bi-tags"></i>  Orientadas a Columnas</i></a>
-                <a class="nav-link" href="/Base4.html"><i class="bi bi-box-seam"></i>  grafos</i></a>
+                <a class="nav-link text-light" href="/Base1.html"><i class="bi bi-people"></i> Documentales</a>
+                <a class="nav-link text-light" href="/Base2.html"><i class="bi bi-person-bounding-box"></i> Clave-Valor</a>
+                <a class="nav-link text-light" href="/Base3.html"><i class="bi bi-tags"></i> Orientadas a Columnas</a>
+                <a class="nav-link text-light" href="/Base4.html"><i class="bi bi-box-seam"></i> Grafos</a>
             </nav>
         </div>
+        <div class="content p-4 w-100">
+            <h1 class="text-center mb-4">Bases de datos de grafos</h1>
+            <div class="row justify-content-center mb-4">
+                <img src="/Img/b4.jfif" class="img-fluid mb-4" alt="Placeholder Image">
+            </div>
+            <div class="row mb-4">
+                <div class="col-12">
+                    <h2 class="text-center mb-3">Introducción</h2>
+                    <p class="text-center">Las bases de datos de grafos están diseñadas para almacenar y gestionar datos altamente conectados. Utilizan nodos, aristas y propiedades para representar y almacenar datos, lo que facilita la modelización de relaciones complejas.</p>
+                </div>
+            </div>
+            <div class="row mb-4">
+                <div class="col-12">
+                    <h2 class="text-center mb-3">Características</h2>
+                    <p class="text-center"><strong>Modelado de relaciones:</strong> Excelentes para modelar relaciones complejas y redes.<br>
+                        <strong>Consultas eficientes::</strong> Permiten consultas eficientes en relaciones y conexiones entre datos.<br>
+                        <strong>Flexibilidad:</strong> Son muy flexibles y pueden adaptarse a cambios en la estructura de datos sin necesidad de reestructurar toda la base de datos.<br>
+                        <strong>Visualización de datos:</strong> Facilitan la visualización de datos y sus relaciones.</p>
+                </div>
+            </div>
+            <div class="row mb-4">
+                <div class="col-12">
+                    <h2 class="text-center mb-3">Funcionamiento</h2>
+                    <p class="text-center">Las bases de datos de grafos almacenan datos en nodos y aristas. Los nodos representan entidades y las aristas representan las relaciones entre ellas. Las propiedades pueden ser añadidas a ambos, nodos y aristas, para almacenar información adicional. Esto permite que las consultas naveguen rápidamente a través de las relaciones entre los datos.</p>
+                </div>
+            </div>
+            <div class="row mb-4">
+                <div class="col-12">
+                    <h2 class="text-center mb-3">Desventajas</h2>
+                    <p class="text-center"><strong>Escalabilidad:</strong> Pueden tener problemas de escalabilidad con grandes volúmenes de datos o relaciones complejas.<br>
+                        <strong>Curva de aprendizaje:</strong> Requieren una curva de aprendizaje más pronunciada para comprender y utilizar eficazmente.<br>
+                        <strong>Soporte de herramientas:</strong> Menos soporte de herramientas y ecosistemas en comparación con bases de datos relacionales y otras NoSQL.</p>
+                </div>
+            </div>
+            <div class="row mb-4">
+                <div class="col-12">
+                    <h2 class="text-center mb-3">Página oficial de documentación</h2>
+                    <p class="text-center"><strong>Neo4j:</strong> https://neo4j.com/docs/<br>
+                        <strong>Amazon Neptune:</strong> https://docs.aws.amazon.com/neptune/latest/userguide/intro.html</p>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="content">
-        <h1 class="text-center">Bases de datos de grafos</h1>
-        <div class="row py-4 ">
-            <h2 class="text-center">Inroduccion</h2>
-            <div class="row py-4 ">
-                <p class="text-center">sadsadsaaaa</p>
-            </div>
-        </div>
-        <div class="row py-4 ">
-            <h2 class="text-center">Características</h2>
-            <div class="row py-4 ">
-                <p class="text-center">sadsadsaaaa</p>
-            </div>
-        </div>
-        <div class="row py-4 ">
-            <h2 class="text-center">Funcionamiento</h2>
-            <div class="row py-4 ">
-                <p class="text-center">sadsadsaaaa</p>
-            </div>
-        </div>
-        <div class="row py-4 ">
-            <h2 class="text-center">Desventajas</h2>
-            <div class="row py-4 ">
-                <p class="text-center">sadsadsaaaa</p>
-            </div>
-        </div>
-        <div class="row py-4 ">
-            <h2 class="text-center">Página oficial de documentación</h2>
-            <div class="row py-4 ">
-                <p class="text-center">sadsadsaaaa</p>
-            </div>
-        </div>
-    </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+Nlg3ytVx1T3MEfsyINwW1N9K4Ypg" crossorigin="anonymous"></script>
 </body>
 </html>
